Enhance theme functionality by saving dark mode preference to localStorage and updating body styles accordingly; refactor theme toggle logic for improved clarity.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="src/assets/newfav1.0.png" />
+    <link rel="apple-touch-icon" href="src/assets/newfav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CodeInHindi</title>
   </head>
